<resources>
    <string name="app_name">Lëtz Learn</string>
    <string name="title1">FR 2 LU</string>
    <string name="title2">Translator</string>
    <string name="title3">L\u00EBtzebuerger Sprooch</string>
    <string name="title4">Powered by Yandex.Translate</string>
    <string name="search">Search</string>
    <string name="translate_text">Translate</string>
    <string name="action_settings">Settings</string>
    <string name="txtCredits"><a href="http://translate.yandex.com">http://translate.yandex.com</a></string>
    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-8848290226463787/2133886741</string>
</resources>
